tests/invalid/conditional_statements/declare_statement.rs
/*
fail: 1
*/

main(): int {
    if (5)
        i: int = 0;
}